Added Create Post Functionality in Frontend with reactive form and custom validators'

--- a/web/src/app/post/create-post/create-post.component.html
+++ b/web/src/app/post/create-post/create-post.component.html
@@ -1,1 +1,30 @@
-<p>create-post works!</p>
+<div class="row">
+
+  <div class="col col-md-8 col-md-offset-2">
+    <form [formGroup]="postForm" (submit)="submitForm()">
+      <div class="form-group">
+        <label for="title">Enter a title for your post:</label>
+        <input class="form-control" formControlName="title" type="text" id="title">
+        <span class="help-block"
+          *ngIf="!postForm.get('title')?.valid && (submitAttempted || postForm.get('title')?.touched)">
+          <span *ngIf="postForm.get('title')?.errors?.required">Post Title is required!</span>
+          <span *ngIf="postForm.get('title')?.errors?.maxlength">Max Length of title is 30 characters!</span>
+        </span>
+      </div>
+      <div class="form-group">
+        <label for="content">Enter Post Content:</label>
+        <textarea id="content" formControlName="content" class="form-control" rows="4"></textarea>
+        <span class="help-block"
+          *ngIf="!postForm.get('content')?.valid && (submitAttempted || postForm.get('content')?.touched)">
+
+          <span *ngIf="postForm.get('content')?.errors?.required">Post content is Required!</span>
+          <span *ngIf="postForm.get('content')?.errors?.containsAbuse">Your Post contains Abuse! Please ammend.</span>
+        </span>
+      </div>
+      <div class="actions">
+        <button class="btn btn-danger" type="button" (click)="postForm.reset()">Clear</button>
+        <button class="btn btn-primary" type="submit">Create Post</button>
+      </div>
+    </form>
+  </div>
+</div>
