Added Update Post Feature to Frontend

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -1,37 +1,36 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <!-- three bars to build a collapse icon-->
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" routerLink="/">Posts</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/">View Posts</a>
-                </li>
-                <li routerLinkActive="active"><a routerLink="/createPost">Create Post</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="signin" routerLinkActive="active"><a routerLink="/login">Login</a></li>
-                <li class="signin" routerLinkActive="active"><a routerLink="/signup">SignUp</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                        aria-expanded="false"><img src="assets/blank-profile.png" class="img-rounded"
-                            height="30px"><span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a>Update Profile</a></li>
-                        <li><a>Change Password</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a>Sign Out</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" (click)="toggleNavBar()">
+        <!-- three bars to build a collapse icon-->
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" routerLink="/">Posts</a>
     </div>
+
+    <div class="collapse navbar-collapse" [ngClass]="{collapse: navBarCollapse}">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/">View Posts</a>
+        </li>
+        <li routerLinkActive="active"><a routerLink="/createPost">Create Post</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="signin" routerLinkActive="active"><a routerLink="/login">Login</a></li>
+        <li class="signin" routerLinkActive="active"><a routerLink="/signup">SignUp</a></li>
+        <li class="dropdown" appDropdownToggle>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+            aria-expanded="false"><img src="assets/blank-profile.png" class="img-rounded" height="30px"><span
+              class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a>Update Profile</a></li>
+            <li><a>Change Password</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a>Sign Out</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
