--- a/web/src/app/post/show-posts/show-posts.component.html
+++ b/web/src/app/post/show-posts/show-posts.component.html
@@ -1,18 +1,22 @@
 <div class="row">
-  <div class="panel panel-info" *ngFor="let post of posts; let i = index">
-    <div class="panel-heading">
-      <div class="panel-title">
-        <h4>{{post.title}}</h4>
+  <span *ngIf="postIndexToEdit < 0">
+    <div class="panel panel-info" *ngFor="let post of posts; let i = index">
+      <div class="panel-heading">
+        <div class="panel-title">
+          <h4>{{post.title}}</h4>
+        </div>
+      </div>
+      <div class="panel-body">
+        <div class="row content">
+          {{post.content}}
+        </div>
+        <div class="row buttons">
+          <button class="btn btn-primary" (click)="editPost(i)">Edit</button>
+          <button class="btn btn-danger" (click)="deletePost(i)">Delete</button>
+        </div>
       </div>
     </div>
-    <div class="panel-body">
-      <div class="row content">
-        {{post.content}}
-      </div>
-      <div class="row buttons">
-        <button class="btn btn-primary">Edit</button>
-        <button class="btn btn-danger" (click)="deletePost(post, i)">Delete</button>
-      </div>
-    </div>
-  </div>
+  </span>
+  <app-create-edit-post *ngIf="postIndexToEdit >= 0" [postToEdit]="posts[postIndexToEdit]"
+    (opStatusChange)="onEditStatusChange($event)"></app-create-edit-post>
 </div>
