--- a/web/src/app/post/show-posts/show-posts.component.html
+++ b/web/src/app/post/show-posts/show-posts.component.html
@@ -1,4 +1,6 @@
 <div class="row">
+  <app-pagination [pageSize]="postsPerPage" [totalEntries]="totalPosts" (activePageChange)="onPageChange($event)">
+  </app-pagination>
   <span *ngIf="postIndexToEdit < 0">
     <div class="panel panel-info" *ngFor="let post of posts; let i = index">
       <div class="panel-heading">
@@ -16,6 +18,7 @@
         </div>
       </div>
     </div>
+
   </span>
   <app-create-edit-post *ngIf="postIndexToEdit >= 0" [postToEdit]="posts[postIndexToEdit]"
     (opStatusChange)="onEditStatusChange($event)"></app-create-edit-post>
