--- a/web/src/app/post/show-posts/show-posts.component.html
+++ b/web/src/app/post/show-posts/show-posts.component.html
@@ -10,12 +10,17 @@
       </div>
       <div class="panel-body">
         <div class="row content">
-          {{post.content}}
+          <div class="col-sm-9">{{post.content}}</div>
+          <div class="col-sm-3">
+            <div class="row buttons">
+              <button class="btn btn-primary" (click)="editPost(i)">Edit</button>
+              <button class="btn btn-danger" (click)="deletePost(i)">Delete</button>
+            </div>
+
+          </div>
+
         </div>
-        <div class="row buttons">
-          <button class="btn btn-primary" (click)="editPost(i)">Edit</button>
-          <button class="btn btn-danger" (click)="deletePost(i)">Delete</button>
-        </div>
+
       </div>
     </div>
 
