--- a/web/src/app/auth/login/login.component.html
+++ b/web/src/app/auth/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<div class="row">
+  <div class="col col-md-6 col-xs-8 col-md-offset-3 col-xs-offset-2">
+
+    <form [formGroup]="loginForm" (submit)="doLogin()">
+      <div class="form-group">
+        <label for="email">Enter Registered Email:</label>
+        <input type="email" id="email" class="form-control" [formControl]="emailControl">
+        <span class="help-block" *ngIf="(loginAttempted || emailControl.touched) && !emailControl.valid">
+          <span *ngIf="emailControl.errors?.required">Email Required!</span>
+          <span *ngIf="emailControl.errors?.email">Enter Valid Email!</span>
+        </span>
+      </div>
+      <div class="form-group">
+        <label for="password">Enter Password:</label>
+        <input type="password" id="password" class="form-control" formControlName="password">
+        <span class="help-block" *ngIf="(loginAttempted || passwordControl.touched) && !passwordControl.valid">Pasword
+          Required!</span>
+      </div>
+      <span class="help-block" *ngIf="loginFailed">Login Failed! {{loginErrorMsg}}</span>
+      <div class="submit">
+        <button class="btn btn-primary" type="submit">Login</button>
+      </div>
+    </form>
+
+  </div>
+</div>
