--- a/web/src/app/auth/signup/signup.component.html
+++ b/web/src/app/auth/signup/signup.component.html
@@ -4,13 +4,15 @@
       <div class="form-group">
         <label for="name">Enter Full Name:</label>
         <input class="form-control" type="text" id="name" formControlName="name">
-        <span class="help-block" *ngIf="signupForm.get('name')?.touched && !signupForm.get('name')?.valid">User Name is
+        <span class="help-block"
+          *ngIf=" (signupAttempted || signupForm.get('name')?.touched) && !signupForm.get('name')?.valid">User Name is
           required!</span>
       </div>
       <div class="form-group">
         <label for="email">Enter Login Email:</label>
         <input class="form-control" type="email" id="email" formControlName="email">
-        <span class="help-block" *ngIf="signupForm.get('email')?.touched && !signupForm.get('email')?.valid">
+        <span class="help-block"
+          *ngIf=" (signupAttempted || signupForm.get('email')?.touched) && !signupForm.get('email')?.valid">
           <span *ngIf="signupForm.get('email')?.errors?.required">Email is Required!</span>
           <span *ngIf="signupForm.get('email')?.errors?.email">Email format is invalid</span>
         </span>
@@ -19,19 +21,21 @@
         <label for="password">Enter Password</label>
         <input class="form-control" type="password" id="password" formControlName="password">
         <span class="help-block"
-          *ngIf="signupForm.get('password')?.touched && !signupForm.get('password')?.valid">Please Enter
+          *ngIf="(signupAttempted || signupForm.get('password')?.touched) && !signupForm.get('password')?.valid">Please
+          Enter
           Password!</span>
       </div>
       <div class="form-group">
         <label for="passwordVerify">Re-type Password</label>
         <input class="form-control" type="password" id="passwordVerify" formControlName="passwordVerify">
         <span class="help-block"
-          *ngIf="signupForm.get('passwordVerify')?.touched && !signupForm.get('passwordVerify')?.valid">
+          *ngIf=" ( signupAttempted || signupForm.get('passwordVerify')?.touched ) && !signupForm.get('passwordVerify')?.valid">
           <span *ngIf="signupForm.get('passwordVerify')?.errors?.required">Please Re-Enter Password!</span>
           <span *ngIf="signupForm.get('passwordVerify')?.errors?.passwordMismatch">Password Re-entered does not match
             original!</span>
         </span>
       </div>
+      <span class="help-block" *ngIf="signupFailed">{{signupErrorMsg}}</span>
       <div class="submit">
         <button class="btn btn-primary" type="submit">Sign Up!</button>
       </div>
